...
                color: Colors.white,
                fontSize: 24,
              ),
            ),
          ),
          ListTile(
            title: Text('Show Favorites'),
            onTap: () {
              if (MediaQuery.of(context).size.width < 600) {
                Navigator.pop(context); // Cerrar el Drawer antes de navegar
              }
              _showFavorites(context);
            },
          ),
          ListTile(
            title: Text('Show History'),
            onTap: () {
              if (MediaQuery.of(context).size.width < 600) {
                Navigator.pop(context); // Cerrar el Drawer antes de navegar
              }
              _showHistory(context);
            },
...
            children: [
              Column(
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
                  Text('From'),
                  DropdownButton<String>(
                    key: const ValueKey('dropdownFrom'),
                    value: context
                        .watch<ConversionProvider>()
                        .fromCurrency,
                    onChanged: (String? newValue) {
                      context.read<FavouritesProvider>().isFavorite = false;
                      context.read<ConversionProvider>().result = 0.0;
...
              ),
              Column(
                crossAxisAlignment: CrossAxisAlignment.start,
                children: [
                  Text('To'),
                  DropdownButton<String>(
                    key: const ValueKey('dropdownTo'),
                    value: context
                        .watch<ConversionProvider>()
                        .toCurrency,
                    onChanged: (String? newValue) {
                      context.read<ConversionProvider>().result = 0.0;
                      context.read<ConversionProvider>().amount = 0.0;
...
            mainAxisAlignment: MainAxisAlignment.center,
            children: [
              ElevatedButton(
                onPressed: () {
                  context.read<ConversionProvider>().convertCurrency(context);
                },
                child: const Text('Convert'),
              ),
              const SizedBox(width: 20),
              ElevatedButton(
                onPressed: () {
                  context.read<ConversionProvider>().clearValues();
                  _amountController.text = '';
                },
                child: const Text('Clear'),
              ),
              const SizedBox(width: 20),
              IconButton(
                icon: context
                    .watch<FavouritesProvider>()
                    .isFavorite
...
