class CurrencyData {
  static const List<String> currencies = [
    'AED - United Arab Emirates Dirham', 'AFN - Afghan Afghani',
    'ALL - Albanian Lek', 'AMD - Armenian Dram',
    'ANG - Netherlands Antillean Guilder', 'ARS - Argentine Peso',
    'AUD - Australian Dollar', 'AZN - Azerbaijani Manat',
    'BBD - Barbadian Dollar', 'BDT - Bangladeshi Taka', 'BGN - Bulgarian Lev',
    'BHD - Bahraini Dinar', 'BIF - Burundian Franc', 'BND - Brunei Dollar',
    'BOB - Bolivian Boliviano', 'BRL - Brazilian Real',
    'BSD - Bahamian Dollar', 'BWP - Botswanan Pula', 'BYN - Belarusian Ruble',
    'BZD - Belize Dollar', 'CAD - Canadian Dollar', 'CHF - Swiss Franc',
    'CHF RTS - Swiss Franc', 'CLP - Chilean Peso', 'CNH - Chinese Yuan Offshore',
    'CNY - Chinese Yuan', 'COP - Colombian Peso', 'CRC - Costa Rican Colón',
    'CUP - Cuban Peso', 'CZK - Czech Koruna', 'DJF - Djibouti Franc', 'DKK - Danish Kroner',
    'DOP - Dominican Peso', 'DZD - Algerian Dinar', 'EGP - Egyptian Pound',
    'ETB - Ethiopian Birr', 'EUR - Euro', 'FJD - Fiji Dollar',
    'GBP - British Pound Sterling', 'GEL - Georgian lari',
    'GHS - Ghanaian Cedi', 'GMD - Gambian Dalasi', 'GNF - Guinean Franc',
    'GTQ - Guatemalan Quetzal', 'HKD - Hong Kong Dollar', 'HNL - Honduran Lempira',
    'HRK - Croatian Kuna', 'HTG - Haitian Gourde', 'HUF - Hungarian Forint',
    'IDR - Indonesian Rupiah', 'ILS - Israeli Shekel', 'INR - Indian Rupee',
    'IQD - Iraqi Dinar', 'IRR - Iranian Rial', 'ISK - Iceland Krona',
    'JMD - Jamaican Dollar', 'JOD - Jordanian Dinar', 'JPY - Japanese Yen',
    'JPY RTS - Japanese Yen','KES - Kenyan Shilling', 'KGS - Kyrgyzstan som',
    'KHR - Cambodian Riel', 'KMF - Comorian Franc', 'KRW - Korean Won',
    'KWD - Kuwaiti Dinar', 'KYD - Cayman Islands Dollar', 'KZT - Kazakhstani tenge',
    'LAK - Lao kip', 'LBP - Lebanese Pound', 'LKR - Sri Lanka Rupee',
    'LSL - Lesotho loti', 'LYD - Libyan dinar', 'MAD - Moroccan Dirham',
    'MDL - Moldovan leu', 'MGA - Malagasy ariary', 'MKD - Macedonian denar',
    'MMK - Myanmar Kyat', 'MOP - Macanese Pataca', 'MRO - Ouguiya',
    'MUR - Mauritian Rupee', 'MVR - Maldivian Rufiyaa', 'MWK - Malawian Kwacha',
    'MXN - Mexican Peso', 'MYR - Malaysian Ringgit', 'MZN - Mozambican Metical',
    'NAD - Namibia Dollar', 'NGN - Nigerian Naira', 'NIO - Nicaraguan Cordoba (cordoba oro)',
    'NOK - Norwegian Krone', 'NPR - Nepalese Rupee', 'NZD - New Zealand Dollar',
    'OMR - Omani Rial', 'PAB - Panamanian Balboa', 'PEN - Peru Sol',
    'PGK - Papua New Guinean Kina', 'PHP - Philippine Peso', 'PKR - Pakistani Rupee',
    'PLN - Polish Zloty', 'PYG - Paraguayan Guarani', 'QAR - Qatari Riyal',
    'RON - Romanian New Leu', 'RUB - Russian Ruble', 'RSD - Serbian dinar',
    'RWF - Rwanda Franc','SAR - Saudi Riyal', 'SCR - Seychelles Rupee',
    'SDG - Sudanese Pound', 'SEK - Swedish Krona', 'SGD - Singapore Dollar',
    'SOS - Somali Shilling', 'STD - Dobra', 'SVC - Salvadoran Colon',
    'SYP - Syrian Pound', 'SZL - Swazi Lilangeni', 'THB - Thai Baht',
    'TJS - Tajikistani somoni', 'TND - Tunisian Dinar', 'TRY - Turkish lira',
    'TTD - Trinidad and Tobago Dollar', 'TWD - Taiwan dollar', 'TZS - Tanzanian Shilling',
    'UAH - Ukrainian Hryvnia', 'UGX - Uganda Shilling', 'USD - US Dollar',
    'UYU - Uruguayan Peso', 'UZS - Uzbekistan Sum', 'VEF - Venezuelan bolívar',
    'VND - Vietnamese Dong', 'VUV - Vanuatu vatu', 'XAF - Central African Franc',
    'XCD - East Caribbean Dollar', 'XDR - Special Drawing Rights',
    'XOF - West African CFA Franc','XPF - French Pacific Franc',
    'YER - Yemeni Rial', 'ZAR - South African Rand', 'ZMK - Zambian kwacha',
  ];

  static const List<String> shortCurrencies = [
    'AED', 'AFN', 'ALL', 'AMD', 'ANG', 'ARS', 'AUD', 'AZN',
    'BBD', 'BDT', 'BGN', 'BHD', 'BIF', 'BND', 'BOB', 'BRL',
    'BSD', 'BWP', 'BYN', 'BZD', 'CAD', 'CHF', 'CHF RTS',
    'CLP', 'CNH', 'CNY', 'COP', 'CRC', 'CUP', 'CZK', 'DJF', 'DKK', 'DOP',
    'DZD', 'EGP', 'ETB', 'EUR', 'FJD', 'GBP', 'GEL',
    'GHS', 'GMD', 'GNF', 'GTQ', 'HKD', 'HNL', 'HRK', 'HTG',
    'HUF', 'IDR', 'ILS', 'INR', 'IQD', 'IRR', 'ISK', 'JMD',
    'JOD', 'JPY', 'JPY RTS','KES', 'KGS', 'KHR', 'KMF', 'KRW', 'KWD', 'KYD', 'KZT',
    'LAK', 'LBP', 'LKR', 'LSL', 'LYD', 'MAD', 'MDL', 'MGA', 'MKD',
    'MMK', 'MOP', 'MRO', 'MUR', 'MVR', 'MWK', 'MXN', 'MYR', 'MZN',
    'NAD', 'NGN', 'NIO', 'NOK', 'NPR', 'NZD', 'OMR', 'PAB', 'PEN', 'PGK',
    'PHP', 'PKR', 'PLN', 'PYG', 'QAR', 'RON', 'RUB', 'RSD', 'RWF','SAR',
    'SCR', 'SDG', 'SEK', 'SGD', 'SOS', 'STD',
    'SVC', 'SYP', 'SZL', 'THB', 'TJS', 'TND', 'TRY', 'TTD',
    'TWD', 'TZS', 'UAH', 'UGX', 'USD', 'UYU', 'UZS', 'VEF', 'VND',
    'VUV', 'XAF', 'XCD', 'XDR', 'XOF','XPF', 'YER', 'ZAR', 'ZMK',
  ];

  /*static const List<String> currencies = [
    'AED',
    'AFN',
    'ALL',
    'USD',
    'EUR',
    'GBP',
    'JPY',
    'MXN',
    'DKK',
    'SEK',
    'CHF',
    'NOK',
    'RUB',
    'TRY',
    'AUD',
    'BRL',
    'CAD',
    'CNY',
    'INR',
    'ZAR'
  ];*/
}